--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@ markdown: kramdown
 kramdown:
   auto_ids:             true
   input:                GFM
-  enable_coderay:       false
+  # enable_coderay:       false
   # coderay_line_numbers: true
   syntax_highlighter_opts:
     line_numbers: true
-  html_to_native:     true
+  # html_to_native:     true
   syntax_highlighter: rouge
   # coderay:
     # coderay_wrap: div
